--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,8 +18,8 @@
   --fundo-principal: #f5f5f5;
   --texto: #222222;
   --texto-inverso: #ffffff;
-  --destaque: #0077ff;
-  --destaque-inverso: #66bbff;
+  --destaque: #149800;
+  --destaque-inverso: #52E55B;
   --fundo-card: #ffffff;
 }
 
@@ -57,4 +57,70 @@ nav#menu a {
 nav#menu a:hover {
   background-color: var(--destaque-inverso);
   color: var(--destaque);
+}
+
+main {
+  display: grid;
+  grid-template-columns: auto 90vw auto;  
+  gap: 20px;
+  margin-top: 20px;
+}
+
+section#ficha {
+  background-color: var(--fundo-card);
+  padding: 20px;
+  border-radius: 8px;
+  grid-column: 2;
+}
+
+section#ficha img.foto {
+  width: 200px;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 5px solid var(--fundo-card);
+  outline: 5px solid var(--destaque);
+  display: block;
+  margin: auto;
+  margin-bottom: 15px;
+}
+
+section#ficha h1 {
+  color: var(--destaque);
+  margin: 15px 0px;
+  font-size: 1.5em;
+}
+
+div#social {
+  display: flex;
+  margin-top: 15px;
+  gap: 0.5em;
+  font-size: 1.7em;
+  justify-content: center;
+  align-items: center;
+}
+
+div#social a {
+  color: var(--destaque);
+  transition: color 0.5s ease-in-out  ;
+}
+
+div#social a:hover {
+  color: var(--destaque-inverso);
+}
+
+section#detalhes {
+  background-color: var(--fundo-card);
+  padding: 20px;
+  border-radius: 8px;
+  grid-column: 2;
+}
+
+section#detalhes h2 {
+  color: var(--destaque);
+  padding: 18px 0px;
+}
+
+section#detalhes div#video {
 }
