--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,11 +32,15 @@ body {
 
 header {
   background-color: var(--destaque);
+  background-attachment: fixed;
   color: var(--texto);
   padding: 10px;
   display: flex;
   justify-content: flex-end;
   align-content: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 nav#menu ul{
@@ -111,31 +115,49 @@ div#social a:hover {
 }
 
 section#detalhes {
-  background-color: var(--fundo-card);
-  padding: 20px;
-  border-radius: 8px;
   grid-column: 2;
 }
 
-section#detalhes h2 {
+article {
+  background-color: var(--fundo-card);
+  border-radius: 8px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+article h2 {
   color: var(--destaque);
-  padding: 18px 0px;
+  margin-bottom: 10px;
 }
 
-section#detalhes div#video {
-  width: 100%;
-  height: 0;
-  padding-bottom: 58.25%;
-  border-radius: 15px;
-  overflow: hidden;
+section#detalhes article#video div.video-container {
   position: relative;
+  width: 100%;
+  margin: auto;
+  aspect-ratio: 16/9;
 }
 
-section#detalhes div#video iframe {
+section#detalhes article#video div.video-container iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   border: none;
+  border-radius: 8px;
+}
+
+@media (min-width:768px) {
+  main {
+    grid-template-columns: auto 300px 1fr auto;
+  }
+
+  section#ficha {
+    grid-column: 2;
+    height: 500px;
+  }
+
+  section#detalhes {
+    grid-column: 3;
+  }
 }
