--- a/estilos/style.css
+++ b/estilos/style.css
@@ -127,7 +127,7 @@ article {
 
 article h2 {
   color: var(--destaque);
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 section#detalhes article#video div.video-container {
@@ -147,7 +147,42 @@ section#detalhes article#video div.video-container iframe {
   border-radius: 8px;
 }
 
-@media (min-width:768px) {
+section#detalhes article#skills div#skill-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 30px;
+}
+
+section#detalhes article#skills div#skill-container div.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+section#detalhes article#skills div#skill-container div.info span.nome {
+  font-weight: bold;
+  color: var(--texto);
+}
+
+section#detalhes article#skills div#skill-container div.info span.porcent {
+  font-weight: bold;
+  color: var(--destaque);
+}
+
+section#detalhes article#skills div#skill-container div.barra {
+  width: 100%;
+  height: 8px;
+  border-radius: 4px;
+  background-color: var(--fundo-principal);
+}
+
+section#detalhes article#skills div#skill-container div.barra div.progresso {
+  height: 100%;
+  background-color: var(--destaque-inverso);
+  border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
   main {
     grid-template-columns: auto 300px 1fr auto;
   }
@@ -159,5 +194,9 @@ section#detalhes article#video div.video-container iframe {
 
   section#detalhes {
     grid-column: 3;
+  }
+
+  section#detalhes article#skills div#skill-container {
+    grid-template-columns: 1fr 1fr;
   }
 }
